Add a rudimentary progress monitor

--- a/logging.properties
+++ b/logging.properties
@@ -34,4 +34,6 @@ org.chartacaeli.Artwork.level = INFO
 # org.chartacaeli.DialDeg
 # org.chartacaeli.FieldOfView
 # org.chartacaeli.HorizonType
+# org.chartacaeli.PeerWatcher
+org.chartacaeli.PeerWatcher.level = INFO
 # org.chartacaeli.UnicodePostscriptStream
