--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,12 @@
 	<build>
 		<defaultGoal>compile</defaultGoal>
 		<sourceDirectory>${basedir}/org/chartacaeli</sourceDirectory>
-		<outputDirectory>${basedir}/app/WEB-INF/classes</outputDirectory>
+		<outputDirectory>${basedir}/web/WEB-INF/classes</outputDirectory>
 		<directory>${basedir}</directory>
 		<finalName>${project.artifactId}-${project.version}</finalName>
 		<resources>
 			<resource>
-				<targetPath>${basedir}/app/lib</targetPath>
+				<targetPath>${basedir}/web/lib</targetPath>
 				<filtering>false</filtering>
 				<directory>${basedir}</directory>
 				<includes>
@@ -28,17 +28,17 @@
 				</includes>
 			</resource>
 			<resource>
-				<targetPath>${basedir}/app/WEB-INF</targetPath>
+				<targetPath>${basedir}/web/WEB-INF</targetPath>
 				<filtering>false</filtering>
-				<directory>${basedir}/lab</directory>
+				<directory>${basedir}</directory>
 				<includes>
 					<include>chartacaeli${shext}</include>
 				</includes>
 			</resource>
 			<resource>
-				<targetPath>${basedir}/app/WEB-INF/lib</targetPath>
+				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
 				<filtering>false</filtering>
-				<directory>${basedir}</directory>
+				<directory>${basedir}/lib</directory>
 				<includes>
 					<include>castor.properties</include>
 					<include>chartacaeli.properties</include>
@@ -47,7 +47,7 @@
 				</includes>
 			</resource>
 			<resource>
-				<targetPath>${basedir}/app/WEB-INF/lib</targetPath>
+				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
 				<filtering>false</filtering>
 				<directory>${basedir}/lib</directory>
 				<includes>
@@ -56,23 +56,7 @@
 				</includes>
 			</resource>
 			<resource>
-				<targetPath>${basedir}/app/WEB-INF/lib</targetPath>
-				<filtering>false</filtering>
-				<directory>${basedir}/../pj2aws</directory>
-				<includes>
-					<include>pj2.jar</include>
-				</includes>
-			</resource>
-			<resource>
-				<targetPath>${basedir}/app/WEB-INF/lib</targetPath>
-				<filtering>false</filtering>
-				<directory>${basedir}/../pj2aws/pj2/lib</directory>
-				<includes>
-					<include>${soprf}EduRitGpuCuda${soext}</include>
-				</includes>
-			</resource>
-			<resource>
-				<targetPath>${basedir}/app/WEB-INF/lib</targetPath>
+				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
 				<filtering>false</filtering>
 				<directory>${basedir}/lib</directory>
 				<includes>
@@ -84,10 +68,11 @@
 					<include>jts-1.14.jar</include>
 					<include>jtsio-1.14.jar</include>
 					<include>runcc.jar</include>
+					<include>pj2.jar</include>
 				</includes>
 			</resource>
 			<resource>
-				<targetPath>${basedir}/app/WEB-INF/lib</targetPath>
+				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
 				<filtering>false</filtering>
 				<directory>${basedir}/org/chartacaeli/caa</directory>
 				<includes>
@@ -96,15 +81,24 @@
 				</includes>
 			</resource>
 			<resource>
-				<targetPath>${basedir}/app/WEB-INF/lib</targetPath>
+				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
 				<filtering>false</filtering>
-				<directory>${basedir}/org/chartacaeli/gpu</directory>
+				<directory>${basedir}/lib</directory>
 				<includes>
-					<include>PJ2TextureMapperGpu_f.cubin</include>
+					<include>${soprf}EduRitGpuCuda${soext}</include>
 				</includes>
 			</resource>
 			<resource>
-				<targetPath>${basedir}/app/WEB-INF/lib</targetPath>
+				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
+				<filtering>false</filtering>
+				<directory>${basedir}/org/chartacaeli/gpu</directory>
+				<includes>
+					<include>PJ2TextureMweberGpu.cubin</include>
+					<include>PJ2TextureMweberGpu_f.cubin</include>
+				</includes>
+			</resource>
+			<resource>
+				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
 				<filtering>false</filtering>
 				<directory>${basedir}</directory>
 				<includes>
@@ -113,7 +107,7 @@
 				</includes>
 			</resource>
 			<resource>
-				<targetPath>${basedir}/app/WEB-INF/lib/cat/MCCM</targetPath>
+				<targetPath>${basedir}/web/WEB-INF/lib/cat/MCCM</targetPath>
 				<filtering>false</filtering>
 				<directory>${basedir}/lib/cat/MCCM</directory>
 				<includes>
