--- a/.gitattributes
+++ b/.gitattributes
@@ -9,5 +9,6 @@ org/chartacaeli/caa/AADate.h.diff				eol=crlf
 org/chartacaeli/caa/AAELPMPP02.h.diff			eol=crlf
 org/chartacaeli/caa/AAElliptical.h.diff			eol=crlf
 org/chartacaeli/caa/AAMoonNodes2.h.diff			eol=crlf
+org/chartacaeli/caa/AAMoonPhases2.h.diff	eol=crlf
 org/chartacaeli/caa/AAPlanetaryPhenomena.h.diff	eol=crlf
 org/chartacaeli/caa/AARiseTransitSet2.h.diff	eol=crlf
