--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,17 @@
 		<outputDirectory>${basedir}/web/WEB-INF/classes</outputDirectory>
 		<directory>${basedir}</directory>
 		<finalName>${project.artifactId}-${project.version}</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+				<excludes>
+					<exclude>**/gpu/tst/</exclude>
+				</excludes>
+				</configuration>
+			</plugin>
+		</plugins>
 		<resources>
 			<resource>
 				<targetPath>${basedir}/web/lib</targetPath>
