--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>chartacaeli</name>
+	<name>chartacaeli-app</name>
 	<comment>@key 32303036313030362D3130303020617374726F6C6162652F6A73636875636B </comment>
 	<projects>
 	</projects>
