--- a/.gitattributes
+++ b/.gitattributes
@@ -11,4 +11,6 @@ org/chartacaeli/caa/AAElliptical.h.diff			eol=crlf
 org/chartacaeli/caa/AAMoonNodes2.h.diff			eol=crlf
 org/chartacaeli/caa/AAMoonPhases2.h.diff	eol=crlf
 org/chartacaeli/caa/AAPlanetaryPhenomena.h.diff	eol=crlf
+org/chartacaeli/caa/AAPlanetaryPhenomena2.h.diff	eol=crlf
+org/chartacaeli/caa/AAPlanetPerihelionAphelion2.h.diff	eol=crlf
 org/chartacaeli/caa/AARiseTransitSet2.h.diff	eol=crlf
